# berlin_bus_guide

./: README.md  package-lock.json  package.json  pyproject.toml
public/: index.html  manifest.json
src/bus_guide/: __init__.py
src/bus_guide/builder/: app.py
src/bus_guide/builder/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/bus_guide/builder/frontend/src/: App.css  App.tsx  index.css
src/bus_guide/builder/frontend/src/components/: ArticleDetail.tsx  CircleManager.tsx  MapView.tsx  RouteSelector.tsx
src/bus_guide/builder/frontend/src/services/: api.ts
src/bus_guide/data/: articles.json  user_circles.json  wiki_articles.json
src/bus_guide/routes/: bus100.geojson
src/bus_guide/scripts/: collect_wiki_articles.py
src/bus_guide/web/: app.py
src/bus_guide/web/map/: visualize.py
src/bus_guide/web/static/: editor_map.html  map.html
src/bus_guide/web/static/css/: circle_editor.css
src/bus_guide/web/static/html/: circle_editor_panels.html
src/bus_guide/web/static/js/: circle_editor.js
src/bus_guide/web/templates/: editor.html  index.html
