[project]
name = "bus-guide"
version = "0.1.0"
description = "Audio guide for buses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "folium>=0.19.5",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bus_guide"]
